# Uni---Part-II

./: .gitignore  Assessment Guide.docx  DegreeOutline.xlsx  Notes  README.md
Codebase/c#/: prac.cs
Codebase/game_design/: HxD.lnk  Unity 2018.1.6f1 (64-bit).lnk  Unity 2018.2.12f1 (64-bit).lnk  blender.lnk  mysticshop.blend  mysticshop.blend1
Codebase/java/: BlueJ.lnk
Codebase/sql/: Microsoft SQL Server Management Studio 2017.lnk
Semester 2 - 2017/: Assignments.docx
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/: CMakeLists.txt  GLFW_EXAMPLE.vcxproj  GLFW_EXAMPLE.vcxproj.filters  main.cpp
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/lib/: cubemap_texture.cpp  cubemap_texture.hpp  dimensional_object.cpp  shader_program.hpp  texture.cpp
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/scripts/: test.sh
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/shaders/: cubemap.frag  cubemap.vert  shader.frag
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/tests/: README.md  scene_tests.cpp  test.cpp  texture_tests.cpp  window_tests.cpp
Semester 2 - 2018/COMP3320 - Computer Graphics/Assignments/MajorAssignment/COMP3320-master/GLFW_EXAMPLE/tests/assets/: invalid.frag  invalid.vert  shader.frag
Uni/: Enrolment.txt  README.md  Study Schedule.xlsx  Timetables.xlsx
(+2792 files in other folders)
